XML 8.7.5 päivitys Päivitettiin käännökset vastaamaan käännöspohjan versiota 8.7.5.

--- a/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
@@ -575,11 +575,15 @@ Yritä uudelleen %2$d sekunnin kuluttua."</string>
      <string name="lockscreen_shortcut_left">Vasen oikotie</string>
      <string name="lockscreen_shortcut_right">Oikea oikotie</string>
      <string name="lockscreen_sim_error_message_short">Virheellinen kortti.</string>
+     <string name="lockscreen_storage_locked">Ota kaikki ominaisuudet ja tiedot käyttöön poistamalla lukitus</string>
      <string name="lockscreen_unlock_left">Vasen oikotie poistaa myös lukituksen</string>
      <string name="lockscreen_unlock_right">Oikea oikotie poistaa myös lukituksen</string>
      <string name="memory_clear_result_giga">%1$sGt vapautettu</string>
      <string name="memory_clear_result_mega">%1$sMt vapautettu</string>
      <string name="menu_ime">Näppäimistön vaihtaja</string>
+     <string name="miui_guide_dialog_button_negative_text">Asetukset</string>
+     <string name="miui_guide_dialog_button_positive_text">Selvä</string>
+     <string name="miui_guide_dialog_message">Median äänet (musiikki, videot jne.) toistetaan Äänettömässä tilassa. Voit muuttaa tätä Asetuksissa.</string>
      <string name="miui_keyguard_ble_unlock_succeed_msg">Lukitus avattiin Bluetooth-laitteella</string>
      <string name="miui_ringer_count_down">Lähtölaskenta</string>
      <string name="miui_ringer_count_down_time">Lähtölaskenta: %s</string>
@@ -589,8 +593,10 @@ Yritä uudelleen %2$d sekunnin kuluttua."</string>
      <string name="miui_ringer_total_description">Mykistä äänet ja poista värinä käytöstä kaikille kohteille paitsi herätyskellolle</string>
      <string name="miui_toast_zen_dnd_to_off">Äänet ja värinä palautettiin normaaliksi</string>
      <string name="miui_toast_zen_standard_to_off">Soittoäänet palautettiin normaaliksi</string>
+     <string name="miui_toast_zen_standard_to_off_when_shield_media">Soittoäänet mukaan luettuna ilmoitukset ja median äänet toistetaan.</string>
      <string name="miui_toast_zen_to_dnd">Äänet mykistettiin ja värinä poistettiin käytöstä</string>
      <string name="miui_toast_zen_to_standard">Puheluiden ja ilmoituksien soittoäänet mykistetty</string>
+     <string name="miui_toast_zen_to_standard_when_shield_media">Soittoäänet mukaan luettuna ilmoitukset ja median äänet mykistetään.</string>
      <string name="mobile_data">Mobiilidata</string>
      <string name="monitoring_description_app">Olet yhteydessä kohteeseen %1$s, joka voi valvoa verkon käyttöä, mukaan lukien sähköposteja, sovelluksia ja verkkosivuja.</string>
      <string name="monitoring_description_app_personal">Olet yhteydessä kohteeseen %1$s, joka voi valvoa henkilökohtaista verkon käyttöä, mukaan lukien sähköposteja, sovelluksia ja verkkosivuja.</string>
@@ -885,34 +891,34 @@ valvoa"</string>
      <string name="stream_system_enforced">Järjestelmän pakottama</string>
      <string name="stream_tts">Lähetetään kaiuttimen kautta</string>
      <string name="stream_voice_call">Puhelu</string>
-     <string name="structure_face_data_delete_fail">人脸删除失败，请稍后重试</string>
-     <string name="structure_face_data_input_down">低头</string>
-     <string name="structure_face_data_input_error_away_screen">请稍微远离手机屏幕</string>
-     <string name="structure_face_data_input_error_expose_eye">请露出眼睛</string>
-     <string name="structure_face_data_input_error_expose_features">请露出五官</string>
-     <string name="structure_face_data_input_error_expose_mouth">请露出嘴巴</string>
-     <string name="structure_face_data_input_error_keep_inface">保持面孔在取景框内</string>
-     <string name="structure_face_data_input_error_near_screen">请靠近手机屏幕</string>
-     <string name="structure_face_data_input_error_open_eye">请睁开眼睛</string>
-     <string name="structure_face_data_input_error_overly_light">请避免光线直射</string>
-     <string name="structure_face_data_input_left">向左转头</string>
-     <string name="structure_face_data_input_ok">成功</string>
-     <string name="structure_face_data_input_right">向右转头</string>
-     <string name="structure_face_data_input_success">录入完成!</string>
-     <string name="structure_face_data_input_up">抬头</string>
-     <string name="structure_face_data_introduction_back">返回</string>
-     <string name="structure_face_data_introduction_msg">3D人脸识别有更高的安全性，可用于解锁手机或验证身份，请设置锁屏密码以开启功能</string>
-     <string name="structure_face_data_introduction_next">继续</string>
-     <string name="structure_face_data_introduction_settingpassword">去设置</string>
-     <string name="structure_face_data_introduction_title">添加3D脸部数据</string>
-     <string name="structure_face_data_ir_input_face">请轻微转动头部</string>
-     <string name="structure_face_data_open_cameraing">相机加载中</string>
-     <string name="structure_face_data_rgb_input_face">将面孔放入取景框内</string>
-     <string name="structure_face_data_suggestion_text">录入时，请保证五官清晰可见，避免佩戴帽子、墨镜、口罩等物件，避免阳光直射。</string>
-     <string name="structure_face_data_suggestion_warning_text">注意，3D人脸识别有更高的安全性，但仍可能会被容貌与你相近的人或外形与你相似的物品解锁。</string>
-     <string name="structure_face_delete_data_dialog_msg">摄像头加载失败，无法获取预览界面，请重试</string>
-     <string name="structure_face_delete_data_dialog_msg_retry">重试</string>
-     <string name="structure_face_delete_data_dialog_title">摄像头加载失败</string>
+     <string name="structure_face_data_delete_fail">Kasvojen 3D-tietoja ei voitu poistaa. Yritä uudelleen.</string>
+     <string name="structure_face_data_input_down">Laske päätäsi</string>
+     <string name="structure_face_data_input_error_away_screen">Vie puhelinta hieman kauemmaksi kasvoistasi</string>
+     <string name="structure_face_data_input_error_expose_eye">Silmiäsi ei tunnisteta</string>
+     <string name="structure_face_data_input_error_expose_features">Joitakin kasvosi osia ei tunnisteta</string>
+     <string name="structure_face_data_input_error_expose_mouth">Huuliasi ei tunnisteta</string>
+     <string name="structure_face_data_input_error_keep_inface">Pidä kasvosi kehyksen sisäpuolella</string>
+     <string name="structure_face_data_input_error_near_screen">Tuo puhelin lähemmäksi kasvojasi</string>
+     <string name="structure_face_data_input_error_open_eye">Avaa silmiäsi hieman leveämmäksi</string>
+     <string name="structure_face_data_input_error_overly_light">Taustavalo on liian voimakas</string>
+     <string name="structure_face_data_input_left">Käännä päätäsi vasemmalle</string>
+     <string name="structure_face_data_input_ok">Valmis</string>
+     <string name="structure_face_data_input_right">Käännä päätäsi oikealle</string>
+     <string name="structure_face_data_input_success">Valmis!</string>
+     <string name="structure_face_data_input_up">Katso ylös</string>
+     <string name="structure_face_data_introduction_back">Takaisin</string>
+     <string name="structure_face_data_introduction_msg">Kasvojen 3D-tiedot sallii laitteesi lukituksen poistamisen ja henkilöllisyytesi vahvistamisen. Sinun pitää asettaa salasana ennen tämän ominaisuuden käyttämistä.</string>
+     <string name="structure_face_data_introduction_next">Jatka</string>
+     <string name="structure_face_data_introduction_settingpassword">Aseta</string>
+     <string name="structure_face_data_introduction_title">Lisää kasvojen 3D-tiedot</string>
+     <string name="structure_face_data_ir_input_face">Liikuta päätäsi hieman</string>
+     <string name="structure_face_data_open_cameraing">Käynnistetään Kameraa…</string>
+     <string name="structure_face_data_rgb_input_face">Aseta kasvosi kehyksen sisäpuolelle</string>
+     <string name="structure_face_data_suggestion_text">Varmista, että kaikki kasvosi osat näkyvät selkeästi. Älä pue yllesi hattuja, aurinkolaseja tai muita kasvojasi peittäviä esineitä kasvojen 3D-tietojen tallennuksen aikana. Varmista, että kasvosi on myös tasaisesti valaistu.</string>
+     <string name="structure_face_data_suggestion_warning_text">Huomio: Kasvojen 3D-tietojen käyttäminen on hieman turvattomampi salasanaan verrattuna. Henkilöt ja objektit, jotka näyttävät tai muistuttavat sinua voivat ehkä poistaa laitteesi lukituksen.</string>
+     <string name="structure_face_delete_data_dialog_msg">Kameran käynnistäminen ja esikatselun hakeminen epäonnistui. Yritä uudelleen.</string>
+     <string name="structure_face_delete_data_dialog_msg_retry">Yritä uudelleen</string>
+     <string name="structure_face_delete_data_dialog_title">Kameran käynnistäminen epäonnistui</string>
      <string name="switch_bar_off">Pois käytöstä</string>
      <string name="switch_bar_on">Käytössä</string>
      <string name="symbol_colon">:</string>
