--- a/Finnish/main/CloudService.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/CloudService.apk/res/values-fi-rFI/strings.xml
@@ -68,6 +68,10 @@
   <string name="loading">Odota hetki…</string>
   <string name="master_alert_notif_content">Synkronointi epäonnistui</string>
   <string name="master_alert_notif_title">Ota Mi Pilven synkronointi käyttöön</string>
+  <string name="member_menu_vipname_free">Ilmainen</string>
+  <string name="member_menu_vipname_mega">Mega</string>
+  <string name="member_menu_vipname_premium">Premium</string>
+  <string name="member_menu_vipname_ultra">Ultra</string>
   <string name="micloud_alert_dialog_positive">OK</string>
   <string name="micloud_all_sub_1_intl_sms">Kansainvälinen tekstiviesti lähetetään SIM-korttisi aktivoimiseksi. Tästä veloitetaan operaattorisi mukainen maksu.</string>
   <string name="micloud_all_sub_1_sms">Normaali tekstiviesti lähetetään SIM-korttisi aktivoimiseksi. Tästä veloitetaan operaattorisi mukainen maksu.</string>
@@ -139,7 +143,7 @@
   <string name="micloud_find_device_guide_alert_negtive">Ei kiitos</string>
   <string name="micloud_find_device_guide_alert_negtive_activate">Ei kiitos</string>
   <string name="micloud_find_device_guide_alert_positive">OK</string>
-  <string name="micloud_find_device_guide_alert_title">Muista Mi Tilisi ID numero ja salasana</string>
+  <string name="micloud_find_device_guide_alert_title">Muista salasanasi</string>
   <string name="micloud_find_device_guide_button">Ota laitteen etsintä käyttöön</string>
   <string name="micloud_find_device_guide_fail_reopen">Voit ottaa Etsi laite -ominaisuuden käyttöön asetuksista Mi Tili - Mi Pilvi</string>
   <string name="micloud_find_device_guide_fail_sub_net">Tarkista verkkoyhteys ja yritä uudelleen.</string>
