XML 8.7.12 päivitys osa 1 Päivitettiin käännökset vastaamaan käännöspohjan versiota 8.7.12. Osa 1.

--- a/Finnish/main/CleanMaster.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/CleanMaster.apk/res/values-fi-rFI/strings.xml
@@ -373,6 +373,7 @@
   <string name="low_memory_warning_dialog_ok_button">Poista</string>
   <string name="low_memory_warning_dialog_title">Tallennustilaa ei ole tarpeeksi</string>
   <string name="main_title_filesize">%1$s roskaa</string>
+  <string name="main_total_garbage">Roskaa yhteensä</string>
   <string name="mainbtn_text_no_trash">Ohita</string>
   <string name="mainbtn_text_quick_cleanup">Puhdista %s</string>
   <string name="mainbtn_text_quick_cleanup_default">Puhdista</string>
@@ -604,6 +605,29 @@
   <string name="wechat_qq_deep_clean_button_text">Syväpuhdista</string>
   <string name="wechat_qq_normal_files">Roskat</string>
   <string name="wechat_video_time">%1$s:%2$s</string>
+  <string name="whatsapp_btn_quick_cleanup">Puhdista %s</string>
+  <string name="whatsapp_clean_exit_confirm_cancel">Peruuta</string>
+  <string name="whatsapp_clean_exit_confirm_msg">Lopeta tarkistus</string>
+  <string name="whatsapp_clean_exit_confirm_ok">Ok</string>
+  <string name="whatsapp_clean_exit_confirm_title">Lopeta WhatsAppin puhdistuksen tarkistus</string>
+  <string name="whatsapp_content_empty">Ei puhdistettavia tiedostoja</string>
+  <string name="whatsapp_delete_confirm_message">Poistetaanko?</string>
+  <string name="whatsapp_delete_done">Kaikki valmista!</string>
+  <string name="whatsapp_file_show_order">Tänään</string>
+  <string name="whatsapp_function_summery">Puhdista WhatsAppin roskatiedostot</string>
+  <string name="whatsapp_function_title">Puhdista WhatsApp</string>
+  <string name="whatsapp_group_audio">Ääni</string>
+  <string name="whatsapp_group_document">Asiakirja</string>
+  <string name="whatsapp_group_gif">GIF</string>
+  <string name="whatsapp_group_image">Kuva</string>
+  <string name="whatsapp_group_video">Video</string>
+  <string name="whatsapp_group_voice">Ääni</string>
+  <string name="whatsapp_group_wallpaper">Taustakuva</string>
+  <string name="whatsapp_title">Puhdista WhatsApp</string>
+  <string name="whatsapp_type_document_recv">Vastaanotetut tiedostot</string>
+  <string name="whatsapp_type_document_send">Lähetetyt tiedostot</string>
+  <string name="whatsapp_type_image_recv">Vastaanotetut kuvat</string>
+  <string name="whatsapp_type_image_send">Lähetetyt kuvat</string>
   <string name="white_list_ad_header">Mainos-tiedostot: %d</string>
   <string name="white_list_apk_header">Asennuspaketit: %d</string>
   <string name="white_list_cache_header">Välimuistitiedostot: %d</string>
