--- a/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
@@ -183,6 +183,19 @@ ja luo otoksen, jossa kaikki ovat parhaimmillaan."</string>
 Puhdista kamerasi linssi parempia kuvia varten."</string>
   <string name="lens_dirty_detected_title_back">Takakameran linssi on likainen</string>
   <string name="lens_dirty_detected_title_front">Etukameran linssi on likainen</string>
+  <string name="lighting_hint_needed">Aseta objekti valokeilaan</string>
+  <string name="lighting_hint_title">Studiovalaistus</string>
+  <string name="lighting_hint_too_close">Siirrä kameraa kauemmaksi</string>
+  <string name="lighting_hint_too_far">Tuo kameraa lähemmäksi</string>
+  <string name="lighting_hint_usage">"Voit käyttää studin valaistustehosteita
+Muotokuvatilassa"</string>
+  <string name="lighting_pattern_dot">Pisteet</string>
+  <string name="lighting_pattern_leaf">Lehdet</string>
+  <string name="lighting_pattern_movie">Elokuva</string>
+  <string name="lighting_pattern_nature">Luonnollinen</string>
+  <string name="lighting_pattern_rainbow">Sateenkaari</string>
+  <string name="lighting_pattern_shutter">Kaihtimet</string>
+  <string name="lighting_pattern_stage">Näyttämö</string>
   <string name="message_snap_double_confirm">Äänenvoimakkuuspainikkeen pitkä painallus käynnistää tällä hetkellä NFC:n. Korvataanko tämä ominaisuus?</string>
   <string name="module_name_beauty">Kauneus</string>
   <string name="module_name_capture">Kuva</string>
@@ -396,6 +409,7 @@ ja tuo henkilöt esiin."</string>
   <string name="pref_camera_sound_title">Kameran äänet</string>
   <string name="pref_camera_square_mode_title">Neliö</string>
   <string name="pref_camera_stereo_mode_title">Tarkennuksen säätö</string>
+  <string name="pref_camera_super_resolution_title">Ota SR käyttöön</string>
   <string name="pref_camera_tilt_shift_entry_circle">Ympyrä</string>
   <string name="pref_camera_tilt_shift_entry_parallel">Rinnakkainen</string>
   <string name="pref_camera_tilt_shift_title">Tilt-shift</string>
